# weather-dash

./: .dockerignore  Dockerfile  README.md  compose.yml  mise.toml  pyproject.toml  run.sh
.github/workflows/: ci.yaml  micropython.yaml  micropython.yml
client/: README.md  weather.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/Weather/: Weather.tsx  chart.tsx  fetch.ts  icons.tsx  main.css  types.ts  utils.ts  weather.module.css  weather.module.css.d.ts
src/weather_dash/: __init__.py  api_routes.py
tests/: test_routes.py
