[project]
name = "weather-dash"
version = "0.1.0"
description = "A dashboard for weather display on an ePaper display."
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi[standard]==0.116.1",
    "pillow==11.3.0",
    "playwright==1.53.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "weather_dash:hello"

[tool.uv]
dev-dependencies = ["ruff==0.12.4", "fastapi-cli==0.0.8"]
