[project]
name = "weather-dash"
version = "0.1.6"
description = "A dashboard for weather display on an ePaper display."
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi[standard]==0.116.1",
    "pillow==11.3.0",
    "playwright==1.54.0",
    "prometheus-client==0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello = "weather_dash:hello"

[tool.uv]
dev-dependencies = [
    "ruff==0.13.0",
    "fastapi-cli==0.0.8",
    "pytest==8.4.2",
    "httpx==0.28.1",
]
